<resources>
    <string name="app_name" translatable="false">Knjigomat</string>
    <string name="base_url" translatable="false">http://192.168.100.178:3000</string>
    <string name="base_chat_url" translatable="false">http://192.168.100.178:8080</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="dialog_language_title">Select Language</string>
    <string name="language_changed">Language changed</string>
    <string name="change_language">Change language</string>
    <string name="menu_home">Home</string>
    <string name="menu_my_books">My books</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_chats">Conversations</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_history">Exchange history</string>
    <string name="condition_new">New</string>
    <string name="condition_good">Very good</string>
    <string name="condition_used">Used</string>
    <string name="condition_damaged">Damaged</string>
    <string name="visibility_private">Private</string>
    <string name="visibility_public">Public</string>
    <string name="status_available">Available</string>
    <string name="status_borrowed">Borrowed</string>
    <string name="unknown">Unknown</string>
    <string name="delete_image_title">Delete Image</string>
    <string name="delete_image_message">Are you sure you want to delete this image?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="book_image_adapter_tag">BookImagePagerAdapter</string>
    <string name="placeholder_user">User: </string>
    <string name="no_messages_yet">No messages yet</string>
    <string name="book_title">Title</string>
    <string name="book_author">Author</string>
    <string name="response_message">Your request is accepted/rejected</string>
    <string name="response_title">Request response</string>
    <string name="replace_image">Replace image</string>
    <string name="user_name">User Name</string>
    <string name="last_message_preview">Last message preview..</string>
    <string name="book_request_msg">Hello, I would like to borrow your book</string>
    <string name="on_hold">On hold </string>
    <string name="dialog_edit_profile_title">Edit Profile</string>
    <string name="chat_title">Chat </string>
    <string name="knjigomat">KNJIGOMAT </string>
    <string name="welcome">Welcome! </string>
    <string name="add_books_note">Add books in your library! </string>
    <string name="exchange_books_note">Exchange books with other users! </string>
    <string name="manage_books_note">Manage your private collection! </string>
    <string name="track_borrowings_books_note">Track borrowing requests! </string>
    <string name="type_message">Type your message..</string>
    <string name="btn_start">START</string>
    <string name="filter_by">Filter by:</string>
    <string name="condition">Condition</string>
    <string name="reset_filters">Reset</string>
    <string name="your_conversations">Your Conversations</string>
    <string name="no_conversations_yet">No conversations yet.</string>
    <string name="no_notifications_yet">No notifications yet.</string>
    <string name="no_history_yet">No history yet.</string>
    <string name="no_private_books">You do not have any private books.</string>
    <string name="private_collection">PRIVATE COLLECTION</string>
    <string name="no_my_books">You do not have any books.</string>
    <string name="exchange_in_progress">In progress</string>
    <string name="exchange_completed">Completed</string>
    <string name="exchange_cancelled">Cancelled</string>
    <string name="lender">Lender</string>
    <string name="borrower">Borrower</string>
    <string name="my_book">Moja knjiga</string>
    <string name="from_someone_else">Od nekog drugog</string>
    <string name="not_selected">Nije odabran</string>
    <string name="status_completed">Završeno</string>
    <string name="status_cancelled">Otkazano</string>
    <string name="status_in_progress">U tijeku</string>
    <string name="status_requested">Zahtjevano</string>
    <string name="unknown_user">Unknown user</string>
    <string name="status_pending">On hold</string>
    <string name="status_accepted">Accepted</string>
    <string name="status_rejected">Rejected</string>
    <string name="button_accept">Accept</string>
    <string name="button_reject">Reject</string>
    <string name="toast_request_accepted">Request is accepted.</string>
    <string name="toast_request_rejected">Request is rejected.</string>
    <string name="error_unsuccessful_response">Unsuccessful response</string>
    <string name="error_update_book">Failed to update book: </string>
    <string name="error_create_book">Failed to create book: </string>
    <string name="error_upload_image">Failed to upload image: </string>
    <string name="error_delete_image">Failed to delete image: </string>
    <string name="add_book">Add book</string>
    <string name="no_book_selected_edit">No book selected for editing</string>
    <string name="chat_start_failed">Unable to start chat - missing information</string>
    <string name="book_request_failed">Failed to send book request: </string>
    <string name="edit_conversations">Edit conversations</string>
    <string name="notifications_marked">All notifications marked as read</string>
    <string name="share_conversation">Share conversation</string>
    <string name="history_filters">Filters of history</string>
    <string name="logout_failed">Logout failed</string>
    <string name="generic_failure">Failure: </string>
    <string name="dialog_add_book_title">Add New Book</string>
    <string name="dialog_edit_book_title">Edit Book</string>
    <string name="dialog_book_request_title">Request Book</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="dialog_logout_title">Logout</string>
    <string name="dialog_mark_notifications_title">Mark All as Read</string>
    <string name="dialog_sending_request_title">Sending Request</string>
    <string name="dialog_request_success_title">Request Sent</string>
    <string name="dialog_request_error_title">Request Failed</string>
    <string name="dialog_logout_error_title">Logout Failed</string>
    <string name="dialog_add_book_message">Would you like to add a new book to your collection?</string>
    <string name="dialog_edit_book_message">Do you want to edit the book \"%1$s\"?</string>
    <string name="dialog_book_request_message">Would you like to send a request to the owner of \"%1$s\" to start a conversation about this book?</string>
    <string name="dialog_edit_profile_message">Do you want to edit your profile information?</string>
    <string name="dialog_logout_message">Are you sure you want to logout?</string>
    <string name="dialog_mark_notifications_message">Mark all notifications as read? This action cannot be undone.</string>
    <string name="dialog_sending_request_message">Sending your request to the book owner. Please wait.</string>
    <string name="dialog_request_success_message">Your request has been sent successfully! The book owner will be notified.</string>
    <string name="dialog_request_error_message">Failed to send your request: %1$s</string>
    <string name="dialog_logout_error_message">Logout failed: %1$s</string>
    <string name="btn_add_book">Add Book</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_edit_profile">Edit Profile</string>
    <string name="btn_send_request">Send Request</string>
    <string name="btn_start_chat">Start Chat</string>
    <string name="btn_later">Later</string>
    <string name="btn_logout">Logout</string>
    <string name="btn_mark_all">Mark All</string>
    <string name="no_book_selected">No book selected</string>
    <string name="dialog_request_limit_title">Request is not possible</string>
    <string name="dialog_request_pending_message">You already have an active request for this book. Please wait for the owner to respond.</string>
    <string name="dialog_request_cooldown_message">You can submit a new request for this book in %s.</string>
    <string name="dialog_request_limit_generic">You cannot request this book at this time.</string>
    <string name="login_success">Success, I am logged in</string>
    <string name="login_failure">Failure: </string>
    <string name="email_not_verified">Please verify your email address and log in.</string>
    <string name="access_token_success">Success: </string>
    <string name="camera_permission_denied">Camera permission denied</string>
    <string name="storage_permission_denied">Storage permission denied</string>
    <string name="select_image_source">Select Image Source</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="chat_with">Chat with: </string>
    <string name="chat_default_title">Chat</string>
    <string name="you">You</string>
    <string name="other_user">Other User</string>
    <string name="default_user_name">User </string>
    <string name="default_chat_placeholder">Chat</string>
    <string name="error_socket_not_connected">Socket not connected, cannot load chats</string>
    <string name="error_activity_not_mainactivity">Activity is not MainActivity</string>
    <string name="error_user_profile_null">User profile is null</string>
    <string name="error_cannot_load_chats">Cannot load chats</string>
    <string name="error_activity_null">Activity is null, cannot update UI</string>
    <string name="error_cannot_navigate">Cannot navigate - activity is not MainActivity</string>
    <string name="error_navigation_failed">Navigation failed</string>
    <string name="error_failed_get_user">Failed to get user: %1$d - %2$s</string>
    <string name="error_could_not_read_error_body">Could not read error body</string>
    <string name="error_failed_get_access_token">Failed to get access token: </string>
    <string name="error_token_request_failed">Token request failed: %1$d - %2$s</string>
    <string name="ownership_title">Book Ownership</string>
    <string name="exchange_status_title">Exchange Status</string>
    <string name="reset_filters_title">Reset Filters</string>
    <string name="reset_filters_message">Are you sure you want to reset all filters?</string>
    <string name="reset_button">Reset</string>
    <string name="cancel_button">Cancel</string>
    <string name="ok_button">OK</string>
    <string name="ownership_label_mine">My exchanges (borrowed from someone else)</string>
    <string name="ownership_label_others">Someone else(borrowed from me)</string>
    <string name="active_filters">Active filters: </string>
    <string name="year_filter">Year: </string>
    <string name="pages_filter">Pages: </string>
    <string name="or"> or </string>
    <string name="dialog_apply_filters_title">Apply Filters</string>
    <string name="dialog_reset_filters_title">Reset Filters</string>
    <string name="btn_apply">Apply</string>
    <string name="dialog_password_title">Change Password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="location">Location</string>
    <string name="user_email">User Email</string>
    <string name="page_count">Page Count</string>
    <string name="language">Language</string>
    <string name="publication_year">Year</string>
    <string name="publisher">Publisher</string>
    <string name="genre">Genre</string>
    <string name="btn_save">Save</string>
</resources>