<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_myBooks"
            android:icon="@drawable/ic_menu_books"
            android:title="@string/menu_my_books" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_user"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_conversations"
            android:icon="@drawable/ic_menu_chats"
            android:title="@string/menu_chats" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_menu_notification"
            android:title="@string/menu_notifications" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_menu_history"
            android:title="@string/menu_history" />
    </group>
</menu>